fixed issue with white space in projects

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1026,6 +1026,9 @@
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
+.websites:before {
+	display: none;
+}
 	
 /* second section */
 
